# flir-thermal-extractor

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
scripts/: example.py
src/: __init__.py
src/flir_thermal_extractor/: __init__.py  flir_thermal_extractor.py  get_thermal.py  raw_temp_to_celcius.py  utils.py
tests/: test_extractor.py  test_raw_temp_to_celcius.py  test_utils.py  test_version.py
