[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flir_thermal_extractor"
version = "0.1.0"
authors = [{"name" = "pvbernhard", "email" = "pvbernhard@gmail.com"}]
description = "FLIR thermal extractor"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "pyexiftool",
    "pillow",
]

#[project.scripts]
#my-command = "my_package.cli:main"

[tool.ruff]
line-length = 88

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
